* config: update controller inspector to adapt to JDK 12+